syntax = "proto3";

package redirection;

option go_package = "api-gateway/proto/redirection-service";

service RedirectionService {
    rpc GetOriginURL(GetOriginURLRequest) returns (GetOriginURLResponse) {}
    rpc GetAccessLog(GetAccessLogRequest) returns (GetAccessLogResponse) {}
}

message GetOriginURLRequest {
    string short_code = 1;
    string ip_address = 2;
    string location = 3;
    string city = 4;
}

message GetOriginURLResponse {
    string origin_url = 1;
}

message GetAccessLogRequest {
    string short_code = 1;
}

message AccessLog {
    int64 id = 1;
    int64 short_url_id = 2;
    string access_time = 3;
    string ip_address = 4;
    string location = 5;
    string city = 6;
}

message GetAccessLogResponse {
    repeated AccessLog logs = 1;
}
